# versionary

./: .gitignore  .versionary-manifest.json  AGENTS.md  CHANGELOG.md  README.md  TODO.md  action.yml  biome.jsonc  devenv.nix  package.json  pnpm-lock.yaml  tsconfig.json  versionary.jsonc
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml  release-pr.yml  release.yml
action/: index.js
assets/: conventional-commits-spec.md  semver-spec.md
schemas/: config.json  manifest.json  versionary-manifest-schema.json  versionary-schema.json
src/: index.ts
src/action/: index.ts
src/cli/: index.ts
src/config/: load-config.ts  schema.ts
src/git/: commits.ts
src/plugins/: capabilities.ts  runtime.ts
src/publish/: npm-plugin.ts
src/release/: artifact-rules.ts  changelog.ts  plan.ts  pr.ts  recovery.ts  release.ts  (+3 more)
tests/: artifact-rules.test.ts  cli-json-output.test.ts  github-plugin-hardening-matrix.test.ts  latex-strategy.test.ts  load-config.test.ts  plugin-capabilities.test.ts  plugin-runtime.test.ts  r-changelog-format.test.ts  r-strategy.test.ts  rust-strategy.test.ts  simple-changelog.test.ts  simple-git-analyze.test.ts  simple-plan-monorepo.test.ts  simple-pr-package-version.test.ts  simple-pr-status-parse.test.ts  simple-pr-utils.test.ts  simple-release-monorepo.test.ts  simple-release-notes-source.test.ts  simple-release-recovery.test.ts  simple-semver.test.ts  simple-state.test.ts  strategy-contract.test.ts  strategy-resolve.test.ts  verify-project.test.ts
tests/fixtures/rust/workspace-panache-like/crates/util/: Cargo.toml
(+52 files in other folders)
